--- a/cc_travel_start/index.html
+++ b/cc_travel_start/index.html
@@ -34,39 +34,118 @@
     <main>
         <!-- favourites -->
         <section class="favourite">
-            Grid of favourite destinations here
-           
+            <img src="/Users/giulianoderosas/codeclan_work/week_03/day_02/day_2/02_grid_flexbox_lab/cc_travel_start/img/favourites/indonesia.png" alt="indonesia">
+            <img src="/Users/giulianoderosas/codeclan_work/week_03/day_02/day_2/02_grid_flexbox_lab/cc_travel_start/img/favourites/australia.png" alt="australia">
+            <img src="/Users/giulianoderosas/codeclan_work/week_03/day_02/day_2/02_grid_flexbox_lab/cc_travel_start/img/favourites/switzerland.png" alt="switzerland">   
         </section>
         <!-- favourites-end -->
 
         <!-- search-start  -->
         <section class="where-togo">
-            Search Form Here
+            <h3>Where do you want to go?</h3>
+            <input type="Where to go?">
+            <input type="dd/mm/yyy">
+            <input type="Travel Type">
+            <button id="bitton">Search</button>
         </section>
         <!-- search-end  -->
 
         <!-- popular-destination-start  -->
+        <header id="yeet">
+            <h2>Popular Destinations</h2>
+            <h6>Some of the most popular countries to visit!</h6>
+        </header>
         <section class="popular">
-            Popular Destinations Grid Here
+            <img src="/Users/giulianoderosas/codeclan_work/week_03/day_02/day_2/02_grid_flexbox_lab/cc_travel_start/img/destination/italy.png" alt="Italy">
+            <img src="/Users/giulianoderosas/codeclan_work/week_03/day_02/day_2/02_grid_flexbox_lab/cc_travel_start/img/destination/brazil.png" alt="Brazil">
+            <img src="/Users/giulianoderosas/codeclan_work/week_03/day_02/day_2/02_grid_flexbox_lab/cc_travel_start/img/destination/america.png" alt="America">
+            <img src="/Users/giulianoderosas/codeclan_work/week_03/day_02/day_2/02_grid_flexbox_lab/cc_travel_start/img/destination/nepal.png" alt="Nepal">
+            <img src="/Users/giulianoderosas/codeclan_work/week_03/day_02/day_2/02_grid_flexbox_lab/cc_travel_start/img/destination/maldives.png" alt="Maldives">
+            <img src="/Users/giulianoderosas/codeclan_work/week_03/day_02/day_2/02_grid_flexbox_lab/cc_travel_start/img/destination/indonesia.png" alt="Indonesia">
         </section>
         <!-- popular-destination-end -->
 
         <!-- popular-places-start -->
+        <header id="header">
+            <h2>Popular Places</h2>
+            <h6>Some of the most popular places to visit!</h6>
+        </header>
         <section class="popular">
-            popular places here
+            <div>
+                <img src="/Users/giulianoderosas/codeclan_work/week_03/day_02/day_2/02_grid_flexbox_lab/cc_travel_start/img/place/california.png" alt="california">
+                <u><h4>California</h4></u>
+                <h6>United States of America</h6>
+            </div>
+            <div>
+                <img src="/Users/giulianoderosas/codeclan_work/week_03/day_02/day_2/02_grid_flexbox_lab/cc_travel_start/img/place/korola_megna.png" alt="korola_megna">
+                <u><h4>Korola Megna</h4></u>
+                <h6>United States of America</h6>
+            </div>
+            <div>
+                <img src="/Users/giulianoderosas/codeclan_work/week_03/day_02/day_2/02_grid_flexbox_lab/cc_travel_start/img/place/london.png" alt="london">
+                <u><h4>London</h4></u>
+                <h6>United Kingdom</h6>
+            </div>
+            <div>
+                <img src="/Users/giulianoderosas/codeclan_work/week_03/day_02/day_2/02_grid_flexbox_lab/cc_travel_start/img/place/miami.png" alt="miami">
+                <u><h4>Miami Beach</h4></u>
+                <h6>United States of America</h6>
+            </div>
+            <div>
+                <img src="/Users/giulianoderosas/codeclan_work/week_03/day_02/day_2/02_grid_flexbox_lab/cc_travel_start/img/place/california_2.png" alt="california">
+                <u><h4>California</h4></u>
+                <h6>United States of America</h6>
+            </div>
+            <div>
+                <img src="/Users/giulianoderosas/codeclan_work/week_03/day_02/day_2/02_grid_flexbox_lab/cc_travel_start/img/place/iceland.png" alt="iceland">
+                <u><h4>Saintmartine Iceland</h4></u>
+                <h6>Iceland</h6>
+            </div>
         </section>
         <!-- popular-places-end  -->
 
         <!-- testimonials-start  -->
         <section class="testimonial-area">
-            Testimonials Here
+            <div>
+                <img src="/Users/giulianoderosas/codeclan_work/week_03/day_02/day_2/02_grid_flexbox_lab/cc_travel_start/img/testmonial/author.png" alt="author">
+                <h5>"The Happiest Place on Earth!"</h5>
+                <h6>- Micky Mouse</h6>
+            </div>
+            <div>
+                <img src="/Users/giulianoderosas/codeclan_work/week_03/day_02/day_2/02_grid_flexbox_lab/cc_travel_start/img/testmonial/author.png" alt="author">
+                <h5>"Not what I was expecting. A LOT of walking."</h5>
+                <h6>- Samwise Gamgee</h6>
+            </div>
+            <div>
+                <img src="/Users/giulianoderosas/codeclan_work/week_03/day_02/day_2/02_grid_flexbox_lab/cc_travel_start/img/testmonial/author.png" alt="author">
+                <h5>"It was nice while it lasted"</h5>
+                <h6>- Darth Vader</h6>
+            </div>
         </section>
         <!-- testimonials-end -->
     </main>
 
     <!-- footer-start -->
     <footer class="footer">
-        Footer Here
+        <div>
+            <h4>CC Travel</h4>
+        </div>
+        <div>
+            <ul>
+                <li><a href="/">Pricing</a></li>
+                <li><a href="/">About</a></li>
+                <li><a href="/">Gallery</a></li>
+                <li><a href="/">Contact</a></li>
+            </ul>
+        </div>
+        <div>
+            <p class="footer-widget">
+                <p>123 Floor</p>
+                <p>Street Edingburg EH1 2BC</p>
+                <p>0131 234 9734</p>
+                <p>contact@cctravel.com</p>
+            </p>
+        </div>
     </footer>
     <!-- footer-end -->
 </body>
